syntax = "proto3";

import "common.proto";

package messari.dex_amm;

message Pool {
  string name = 1;
  bytes address = 2; // bytes: Address
  repeated messari.common.ERC20Token input_tokens = 3;

  // Metrics
  string total_value_locked = 100; // string: BigDecimal
}

message PoolToken {
  bytes address = 1; // bytes: Address
  // Balance of input token in native amounts
  string balance = 2; // string: BigInt
  // Weights of input token in the liquidity pool in percentage values. For example, 0.5/0.5 for Uniswap pools, 0.482/0.518 for a Curve pool, 0.1/0.1/0.8 for a Balancer pool
  double weight = 3;
}

message Pools {
  repeated Pool items = 1;
}
